<resources>
    <string name="app_name">Pokemon List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello World!</string>
    <string name="loading">Loading...</string>
    <string name="placeholder">placeholder</string>
    <string name="number_placeholder">#1</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="sp_attack">Sp. Attack</string>
    <string name="sp_defense">Sp. Defense</string>
    <string name="speed">Speed</string>
    <string name="pokemon_list">Pokemon List</string>
    <string name="name">Name</string>
</resources>
