<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stateListAnimator="@null"
    tools:context=".fragment.DetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lower_square"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/background_square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back_button"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/img_pokemon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_header" />

    <ImageView
        android:id="@+id/img_type1"
        android:layout_width="92dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/img_pokemon"
        app:layout_constraintTop_toBottomOf="@+id/img_pokemon" />

    <ImageView
        android:id="@+id/img_type2"
        android:layout_width="92dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/img_pokemon"
        app:layout_constraintTop_toBottomOf="@+id/img_pokemon" />

    <ImageView
        android:id="@+id/img_single_type"
        android:layout_width="92dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_pokemon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/img_pokemon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="165dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/prog_hp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ProgressBar
                android:id="@+id/prog_atk"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prog_hp" />

            <ProgressBar
                android:id="@+id/prog_def"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prog_atk" />

            <ProgressBar
                android:id="@+id/prog_sp_atk"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prog_def" />

            <ProgressBar
                android:id="@+id/prog_sp_def"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prog_sp_atk" />

            <ProgressBar
                android:id="@+id/prog_speed"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prog_sp_def" />

            <TextView
                android:id="@+id/txt_def_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"
                app:layout_constraintBottom_toBottomOf="@id/prog_def"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/prog_def"/>

            <TextView
                android:id="@+id/txt_sp_atk_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_attack"
                app:layout_constraintBottom_toBottomOf="@id/prog_sp_atk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/prog_sp_atk"/>

            <TextView
                android:id="@+id/txt_sp_def_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_defense"
                app:layout_constraintBottom_toBottomOf="@id/prog_sp_def"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/prog_sp_def"/>
            <TextView
                android:id="@+id/txt_sp_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                app:layout_constraintBottom_toBottomOf="@id/prog_speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/prog_speed"/>

            <TextView
                android:id="@+id/txt_hp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp"
                app:layout_constraintBottom_toBottomOf="@+id/prog_hp"
                app:layout_constraintEnd_toStartOf="@+id/prog_hp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_hp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/prog_hp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prog_hp" />

            <TextView
                android:id="@+id/txt_def_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/prog_def"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prog_def" />

            <TextView
                android:id="@+id/txt_sp_atk_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/prog_sp_atk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prog_sp_atk" />

            <TextView
                android:id="@+id/txt_sp_def_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/prog_sp_def"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prog_sp_def" />

            <TextView
                android:id="@+id/txt_sp_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/prog_speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prog_speed" />

            <TextView
                android:id="@+id/txt_atk_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack"
                app:layout_constraintBottom_toBottomOf="@+id/prog_atk"
                app:layout_constraintEnd_toStartOf="@+id/prog_atk"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_atk_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/prog_atk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prog_atk" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/placeholder"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>